<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_burger_slam</name>
  <version>0.1.0</version>
  <description>
    SLAM Toolbox integration for the FetchMan TurtleBot3 Burger.
    Provides online-async mapping with tuned parameters for the
    TurtleBot3 Burger LiDAR (max range 3.5 m, 360° scan).
  </description>
  <maintainer email="example@example.com">fetchman-vip</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime: slam_toolbox must be installed on the robot/dev machine -->
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
